# 9900-F18A-CAKE

./: .gitignore  Child.ipynb  Child2.ipynb  Dockerfile  Fanout.ipynb  MODEL_PERSISTENCE_README.md  Main_Parallel_Runner.ipynb  Parent.ipynb  Parent2.ipynb  README.md  Training_LogReg.ipynb  Training_model.ipynb  Training_model_MLFlow.ipynb  Training_model_job.ipynb  data_check.ipynb  demo_research_saving.py  dockerfile  fanout_mlflow.ipynb  fix_log.md  label_save.ipynb  pyproject.toml  requirements.txt  run_research_training.py  test_research_setup.py
config/: base_config.yaml  filtering_config.yaml
data/: colorProfiles.json
data/freeze0525/: README.md  diseaseTree_mapped.joblib
data/freeze0525/__MACOSX/: ._MValue_concat.csv
hc_3900/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-min.txt  requirements.txt  run_all.sh
hc_3900/artifacts/: rf_baseline.joblib  rf_baseline.metrics.json  rf_preds.csv
hc_3900/data/freeze0525/: classes.txt  feature_list.txt  rf_baseline.metrics.json
hc_3900/datasets/: labels.csv  labels_zero2.csv  noisy_labels.csv  synthetic_mvalues.csv  tree_zero2.json
hc_3900/scripts/: baseline_train.py  plot_metrics.py
mt-method1/: manifest.mf
mt-method1/mt-method1/: Training_model.py  Training_mul_model.py  data_check.py  requirements.txt
results/: README.md
src/mch/: __init__.py
src/mch/api/: endpoints.py  rebuildmain.py  who_book_processing.py
src/mch/config/: base_config.py  base_config.yaml  modelTrainingConfig.yaml  modelTrainingParameters.py  settings.py  (+3 more)
(+94 files in other folders)
