[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mch"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

description = "Methylation analysis package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "typedb-client",
    #"databaseConnector",  # your custom package
]

[project.urls]
"Homepage" = "https://github.com/yourusername/methylation"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    # Add specific warning patterns as needed
]